Overlapping box issue on Contacts page

--- a/src/routes/contacts/Contacts.css
+++ b/src/routes/contacts/Contacts.css
@@ -63,6 +63,10 @@
   color: color-mod(var(--dark-color) a(70%));
   font-style: italic;
   margin-bottom: 0;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .contactEmail,
